fixed background on mobile devices

--- a/style.css
+++ b/style.css
@@ -14,9 +14,12 @@ p{
 
 body{
     background-image:url(cover5.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin: 0px;
+    padding: 10px;
 }
 #image1{
     height: 100%;
